--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,7 @@ URI Online Judge/C/1 - Beginner/a.out
 URI Online Judge/C/1 - Beginner/teste.c
 URI Online Judge/C/2 - Ad-hoc/a.out
 URI Online Judge/C/5 - Mathematics/a.out
+URI Online Judge/C++/teste.cpp
+URI Online Judge/C++/C++ Como Programar.pdf
+URI Online Judge/C++/teste
+Codeforces/teste.cpp
