--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,5 @@ URI Online Judge/C++/teste.cpp
 URI Online Judge/C++/C++ Como Programar.pdf
 URI Online Judge/C++/teste
 Codeforces/teste.cpp
+URI Online Judge/C/teste
+URI Online Judge/C/teste.c
