--- a/.gitignore
+++ b/.gitignore
@@ -12,3 +12,4 @@ LeetCode/teste.c
 LeetCode/teste
 CodeWars/C/teste
 CodeWars/C/teste.c
+Codeforces/UTPC Contest 02-11-22 Div. 2 (Beginner)/teste.cpp
