--- a/.gitignore
+++ b/.gitignore
@@ -13,3 +13,4 @@ LeetCode/teste
 CodeWars/C/teste
 CodeWars/C/teste.c
 Codeforces/UTPC Contest 02-11-22 Div. 2 (Beginner)/teste.cpp
+Codeforces/C++/UTPC Contest 02-11-22 Div. 2 (Beginner)/teste.cpp
