--- a/.gitignore
+++ b/.gitignore
@@ -14,3 +14,5 @@ CodeWars/C/teste
 CodeWars/C/teste.c
 Codeforces/UTPC Contest 02-11-22 Div. 2 (Beginner)/teste.cpp
 Codeforces/C++/UTPC Contest 02-11-22 Div. 2 (Beginner)/teste.cpp
+LeetCode/C/Programming Skills I/teste.c
+LeetCode/C/Programming Skills I/teste
